Thu  6 May 2010 09:27:56 - Release 0.84
  Revert always using a trait rather than Catalyst::Request::REST to improve
  debug messages.

  Add a status_multiple_choices helper method to the Controller base class.

  Allow 3XX responses to be serialized.

Mon  8 Feb 2010 22:17:12 GMT - Release 0.83
  Make it possible to deserialize a request with a DELETE method. This probably
  breaks 'strict' REST guidelines, but is useful for being able to delete multiple
  resources from a single call by providing a batch delete method.

  Remove JSONP from the list of default serializers (RT#54336)

  Fix MANIFEST (RT#54408)

Thu  4 Feb 2010 22:31:57 GMT - Release 0.82

  Integrated Catalyst::Request::REST::ForBrowsers as
  Catalyst::TraitFor::Request::ForBrowsers. (Dave Rolsky)

  Clarified docs so that they encourage the use of the request traits, rather
  than using Catalyst::Request::REST. (Dave Rolsky)

  When Catalyst::Action::REST or Controller::REST automatically add the trait,
  your request class will no longer end up getting set to
  Catalyst::Request::REST. Instead, creates an anon class with the appropriate
  role. (Dave Rolsky)

  Shut up log output from the tests. (Dave Rolsky)

  Added a $VERSION to every module, mostly to make sure that when people
  install Catalyst::Request::REST::ForBrowsers, they get the version in this
  distro. (Dave Rolsky)

  Change Catalyst::Action::Serialize, Catalyst::Action::Deserialize and
  Catalyst::Action::SerializeBase to be more Moose like.

  Fix JSON and JSON::XS to encode_blessed. (fREW)

  Fix Catalyst::Action::Serialize to use objects instead of classes. (fREW)

  Fix doc nits. (RT#53780)

Thu 14 Jan 20:56:00 GMT 2010 - Release 0.81

  Add a JSONP serialization type.

Sat 19 Dec 14:54:00 GMT 2009 - Release 0.80

  Convert all classes to Moose

  Change Catalyst::Request::REST to be a mostly empty class, with
  all the functionality in Catalyst::TraitFor::Request::REST

  Simplify _get_allowed_methods method (aristotle)
