@@ -4,11 +4,10 @@ author:
   - 'Adam Jacob <adam@stalecoffee.org>, with lots of help from mst and jrockway'
 build_requires:
   ExtUtils::MakeMaker: 6.42
-  Test::More: 0.88
 configure_requires:
   ExtUtils::MakeMaker: 6.42
 distribution_type: module
-generated_by: 'Module::Install version 0.950'
+generated_by: 'Module::Install version 0.97'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -22,17 +21,23 @@ no_index:
 requires:
   Catalyst::Runtime: 5.80
   Class::Inspector: 1.13
+  Config::General: 0
   Data::Serializer: 0.36
+  Data::Taxi: 0
+  FreezeThaw: 0
+  JSON: 2.12
   LWP::UserAgent: 2.033
   MRO::Compat: 0.10
   Module::Pluggable::Object: 0
   Moose: 0
+  PHP::Serialization: 0
   Params::Validate: 0.76
   URI::Find: 0
+  XML::Simple: 0
   YAML::Syck: 0.67
   namespace::autoclean: 0
   perl: 5.8.1
 resources:
   license: http://dev.perl.org/licenses/
   repository: git://git.shadowcat.co.uk/catagits/Catalyst-Action-REST.git
-version: 0.84
+version: 0.85
